--- a/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
@@ -111,22 +111,22 @@ SAU_purge_ikhwan_desc:0 "이크완은 자격없는 지배자가 씌운 멍에로
 SAU_dealing_with_kuwait:0 "쿠웨이트와 거래"
 SAU_dealing_with_kuwait_desc:0 "사바 가문은 오랜 세월동안 스스로의 일을 결정할 수 있는 자치권을 갈망하였습니다. 만약 그들이 자치를 원한다면 전략적 요충지에 있는 건물들을 포함한 아라비아 만 전역에 있는 자산을 우리에게 넘겨 주어야 합니다"
 SAU_consolidating_realm:0 "소왕국 통합"
-SAU_consolidating_realm_desc:0 "Our tribal allies will all gather again, and will be convinced by our wise arguments that our Emir is the sole supreme lord of Arabia. Of course, things are a little more complicated than that, and a concentrated effort must be made to reach that end"
+SAU_consolidating_realm_desc:0 "우리의 동맹 부족들을 소집하여 그들 앞에서 저희 아미르께서 유일하게 높으신 아라비아의 지배자임을 주장하여 확신시켜야 합니다. 물론 실상은 약간 어려움이 따르긴 합니다만, 대업을 완수할때까지는 계속하여 노력해야 합니다"
 SAU_saudi_legal_code:0 "사우디 법전"
-SAU_saudi_legal_code_desc:0 "While we still will preserve local law and legislation, we need to draft a proper legal code to be established in the entirety of our Kingdom's territory"
+SAU_saudi_legal_code_desc:0 "지역 법률과 사법 제도를 가만 놔두고 있다고 해도, 미래 우리 왕국 영토 전체에 수립될 적절한 법체계를 입안할 필요가 있습니다"
 SAU_minority:0 "소수자들을 보호"
-SAU_minority_desc:0 "For centuries, despite our differences, we have respected the rights of the Christians, Jews and other peoples under our rule, as it was instructed by the Prophet himself. We must ensure that all of our subjects, no matter their creed, are safeguarded"
+SAU_minority_desc:0 "선지자께서 일러주신 바와 같이 우리 이슬람교도들은 공동체간의 현저한 차이에도 불구하고 수백년동안 기독교도와 유대인 그리고 우리 통치 아래 있는 여러 민족의 권리를 존중해왔습니다. 신조를 불문하고 모든 백성들은 안전하게 보호받아야만 합니다"
 SAU_absolute_rulership:0 "전제정치"
-SAU_absolute_rulership_desc:0 "There is no time for deliberation and liberalism; there is only time for action. A leader must not waste his time listening to those lesser than him, but rather focus on his own opinions and his most trusted advisers"
+SAU_absolute_rulership_desc:0 "토론과 자유주의에 낭비할 시간은 없습니다. 오직 행동할 시간만 있을 뿐입니다. 지도자는 자신보다 직급이 낮은 자의 의견을 경청하는데 시간을 낭비해서는 안되며 스스로의 의견과 가장 신임하는 신하들에게 더욱 주의를 기울여야 합니다"
 SAU_realm_of_the_arabs:0 "아랍의 소왕국들"
-SAU_realm_of_the_arabs_desc:0 "All of Arabia is under us, and nothing can stand between us and the destiny of our people, to be united as one, under one single monarch: a Saud"
-SAU_houses_of_wisdom:0 "Houses of Wisdom"
-SAU_houses_of_wisdom_desc:0 "Houses of Wisdom"
+SAU_realm_of_the_arabs_desc:0 "아라비아 전역이 우리 치하에 있으며 그 누구도 우리와 나란히 설 수 없습니다. 또한 우리 백성들은 유일한 군주 사우드 가문 치하에서 하나로 통일될 운명입니다"
+SAU_houses_of_wisdom:0 "지혜의 집"
+SAU_houses_of_wisdom_desc:0 "지혜의 집"
 
 SAU_land_of_faith:0 "신앙의 땅"
-SAU_cleanse_suryah:0 "수리예 청소"
-SAU_cleanse_fringe_arabia:0 "Cleanse Fringe Arabia"
-SAU_cleanse_iraq_i_arab:0 "이라크-아이-아랍 청소"
+SAU_cleanse_suryah:0 "수리예 정화"
+SAU_cleanse_fringe_arabia:0 "주변부 아라비아 정화"
+SAU_cleanse_iraq_i_arab:0 "이라크-아이-아랍 정화"
 SAU_cleansing_of_heresy:0 "이단 정화"
 SAU_law_of_faith:0 "신앙의 법"
 SAU_Jizya:0 "지즈야"
@@ -142,18 +142,18 @@ SAU_kuffar_weaponry:0 "쿠파르 무기"
 SAU_the_caliphate:0 "사우드 가문 칼리프조"
 SAU_haia:0 "도덕 경찰 설립"
 SAU_succession_regulation:0 "정당한 계승"
-SAU_land_of_faith_desc:0 "With the support of our clergy and wise experts of faith, we shall build Arabia into a paradise for the faithful, God being our witness."
-SAU_cleanse_suryah_desc:0 "Too many Turkish and Egyptian double agents, even atheist syndicalists roam the streets in the cities of Syria. Their sinful lives revolve around spreading unrest, and we will ensure they can't do that."
-SAU_cleanse_fringe_arabia_desc:0 "Too many Turkish and German double agents, even atheist liberals roam the streets in the cities of Yemen and Oman. Their sinful lives revolve around spreading unrest, and we will ensure they can't do that."
-SAU_cleanse_iraq_i_arab_desc:0 "Too many Turkish and [PER.GetAdjective] double agents, and even atheist syndicalists roam the streets in the cities of the Mashriq. Their sinful lives revolve around spreading unrest, and we will ensure they can't do that."
-SAU_cleansing_of_heresy_desc:0 "Too many Turkish double agents, Rashid loyalists and even atheist syndicalists roam the streets in the lands of Arabia. Their sinful lives revolve around spreading unrest and we will ensure they can't do that."
-SAU_law_of_faith_desc:0 "A new law is in place of a Arabia; the Canon Law as established by the Prophet, blessed be his name. Arabia is no place for apostates!"
-SAU_Jizya_desc:0 "Those who are not of the faith will enjoy our protection, and for a nominal tax will be fairly and justly protected. We, unlike the honour less Turk, fulfil our deals."
-SAU_gather_the_amirs_desc:0 "All the lords of importance in Arabia are to be gathered and will be convinced to join on our new, bright order."
+SAU_land_of_faith_desc:0 "성직자들과 현명한 신학 전문가들의 지원에 힘입어 우리는 신앙의 천국 아라비아를 건설할 것입니다. 신께서는 증인이 되실 것입니다."
+SAU_cleanse_suryah_desc:0 "너무도 많은 투르크나 이집트 그리고 심지어는 무신론자 생디칼리즘 진영에서 파견한 이중간첩이 시리아 도심을 활보하며 다닙니다. 그들의 죄악으로 가득 찬 목숨은 퍼져나가는 사회적 불만 주변에서 알짱거리고 있습니다. 더이상 그렇게 행동할 수 없도록 해야 합니다."
+SAU_cleanse_fringe_arabia_desc:0 "너무도 많은 투르크나 독일 그리고 심지어는 무신론자 자유주의 진영에서 파견한 이중간첩이 예멘과 오만 도심을 활보하며 다닙니다. 그들의 죄악으로 가득 찬 목숨은 퍼져나가는 사회적 불만 주변에서 알짱거리고 있습니다. 더이상 그렇게 행동할 수 없도록 해야 합니다."
+SAU_cleanse_iraq_i_arab_desc:0 "너무도 많은 투르크나 [PER.GetAdjective] 그리고 심지어는 무신론자 생디칼리즘 진영에서 파견한 이중간첩이 마쉬리크 도심을 활보하며 다닙니다. 그들의 죄악으로 가득 찬 목숨은 퍼져나가는 사회적 불만 주변에서 알짱거리고 있습니다. 더이상 그렇게 행동할 수 없도록 해야 합니다."
+SAU_cleansing_of_heresy_desc:0 "너무도 많은 투르크와 라시드 가문 충성파 그리고 심지어는 무신론자 생디칼리즘 진영에서 파견한 이중간첩이 아라비아 도심을 활보하며 다닙니다. 그들의 죄악으로 가득 찬 목숨은 퍼져나가는 사회적 불만 주변에서 알짱거리고 있습니다. 더이상 그렇게 행동할 수 없도록 해야 합니다."
+SAU_law_of_faith_desc:0 "예언자께서 확립하신 종교법 체계가 아라비아에 새롭게 시행되었습니다. 그분의 이름이여 축복받으소서. 아라비아에는 더 이상 배교자가 발붙일 땅이 없습니다!"
+SAU_Jizya_desc:0 "신앙을 받아들이지 않은 자들이라도 보호를 받아야만 하며, 근소한 세금만을 지불한다면 공정하고 정당한 보호를 받을 것입니다. 저 불명예스러운 투르크인과 달리 우리는 약속을 지킬 것입니다."
+SAU_gather_the_amirs_desc:0 "아라비아의 주요 영주 전부가 우리의 새롭고 영롱히 빛나는 결사대에 가담하고자 모여들 것입니다."
 SAU_trading_regulations_desc:0 "If the Kuffar are so interested in Oil, let them pay for it. The funds will reach the right hands, and in return they will be allowed to dig deeper."
-SAU_funds_for_faith_desc:0 "Funds for the Faith."
-SAU_ghazis_desc:0 "Gather men of faith! The time for great effort arrives! Your strength and determination is what separates you from the honourless curs that serve the idols!"
-SAU_extreme_jihad_desc:0 "Every true Muslim warrior knows that when fighting for Arabia, they fight for God, Country and their very families. There is no effort that can be spared, the time of great struggle is near!"
+SAU_funds_for_faith_desc:0 "신앙 기금."
+SAU_ghazis_desc:0 "신앙의 전사를 소집하십시오! 위대한 분투를 위한 때가 왔습니다! 당신은 힘과 투지로 인해 우상 숭배라는 불명예로운 저주로부터 해방되었습니다!"
+SAU_extreme_jihad_desc:0 "모든 참된 무슬림 전사는 아라비아를 위해 싸우는 것이 신과 국가 그리고 가족을 위한 싸움이 되리라는 사실을 잘 알고 있습니다. 피할 수 없는 위대한 투쟁의 시대가 목전에 있습니다!"
 SAU_hunt_apostates_desc:0 "We will start a crackdown on the so called 'syndicalists', jumped up guild masters who think their our labour is a god. Of all silly western notions, this one is perhaps the most poisonous, and we must cut down this evil. God willing, we will succeed."
 SAU_destroy_dissent_desc:0 "Nothing is worse than a traitor. Not only of the faith, but of our homes, families and all we stand for! The shame of it! Alas, we must treat them the steel they deserve."
 SAU_madrasah_funding_desc:0 "Our greatest scholars will now gain the proper funding they require, and hopefully fund new schools here and abroad, for all the faithful who wish to learn."
@@ -218,7 +218,7 @@ SAU_kuwait_naval_base:0 "쿠웨이트 해군 기지"
 SAU_kuwait_naval_base_desc:0 "Once an stronghold for the house of Al Sabah, Kuwait will now be properly refitted to be our main port for the foreseeable future"
 SAU_naval_exercises:0 "Naval Exercises"
 SAU_naval_exercises_desc:0 "As we prepare for confrontation with [PER.GetNameDef] and other hostile powers in the Arabian Gulf, we will conduct navy exercises to ensure our fleet has actual experience at sea when conflict flares up"
-SAU_liberation_war_of_holy_cities:0 "Liberate the Holy Cities"
+SAU_liberation_war_of_holy_cities:0 "성지 해방"
 SAU_liberation_war_of_holy_cities_desc:0 ""
 SAU_mobilize_the_tribes:0 "부족들을 징집하라"
 SAU_mobilize_the_tribes_desc:0 "Every tribe in these lands has sworn to help us, and now we are at war with foes which wish to undo all we have fought for so long. Fulfil your oaths! Come to us, for your Emir calls for aid!"
@@ -332,32 +332,32 @@ saud.48.a:0 "We shall not forget this"
 
 saud.49.t:0 "The Sultan of Arabia declares himself Caliph"
 saud.49.d:0 "The Sultan of Arabia has declared himself the Caliph of Islam. This is an obvious ploy at power. We should reject his claim, we do not need to recognise the claims."
-saud.49.a:0 "He is not the Caliph"
+saud.49.a:0 "그는 칼리프가 아니다"
 
 saud.50.t:0 "Azerbaijan Rejects our Claims"
 saud.50.d:0 "We have received news from Azerbaijan that the people their have seemed to decide that we are not the caliph in their eyes. This is an outrage that we shall not forget."
-saud.50.a:0 "We shall not forget this"
+saud.50.a:0 "잊지 않을 것이다"
 
 saud.51.t:0 "The Sultan of Arabia declares himself Caliph"
 saud.51.d:0 "The Sultan of Arabia has declared himself the Caliph of Islam. This is an obvious ploy at power. We should reject his claim, we do not need to recognise the claims."
-saud.51.a:0 "He is not the Caliph"
+saud.51.a:0 "그는 칼리프가 아니다"
 
 saud.52.t:0 "Turkey Rejects our Claims"
 saud.52.d:0 "We have received news from Turkey that the people their have seemed to decide that we are not the caliph in their eyes. This is an outrage that we shall not forget."
-saud.52.a:0 "We shall not forget this"
+saud.52.a:0 "잊지 않을 것이다"
 
-saud.53.t:0 "Weapon Sales to Nejd"
+saud.53.t:0 "나지드와 무기 거래"
 saud.53.d:0 "To bolster their army in the coming struggle against the Ottoman Empire, Nejd has offered us large sums of wealth and oil if we were to assist them in their struggle."
-saud.53.a:0 "Send them the weapons"
-saud.53.b:0 "We don't care about some desert in the Middle East"
+saud.53.a:0 "무기를 제공하라"
+saud.53.b:0 "우리는 중동 사막에 관심이 없다"
 
-saud.54.t:0 "Germany refuses the sale"
+saud.54.t:0 "독일이 판매를 거절하다"
 saud.54.d:0 "In a surprising move from Berlin, the German government has refused to authorise the sale of weapons to us claiming there are more worthwhile partners in need of their support than some nomads in a worthless desert."
-saud.54.a:0 "They'll regret this!"
+saud.54.a:0 "후회하게 될것이다!"
 
-saud.55.t:0 "Germany accepts the sale"
+saud.55.t:0 "독일이 판매를 결정하다"
 saud.55.d:0 "Berlin has accepted our terms and have sent the first batch of weapons to Riyadh to assist us in the coming battle. While it is a costly gamble for our government, it may pay off in the long run."
-saud.55.a:0 "These weapons will annihilate the Rashidi scum!"
+saud.55.a:0 "이 무기들이 라시드 가문 쓰레기들을 전멸시킬 것이다!"
 
 ### Events ###
 saud.150.t:0 "이크완 반란!"
