--- a/Kaiserreich Korean Translation/localisation/KR_Leaders_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Leaders_l_english.yml
@@ -1,10 +1,10 @@
 l_english:
 
 ### Events ###
-unit_leader.1.t:0 "[From.From.GetName]이(가) 앓아 눕다"
-unit_leader.1.d:0 "In [From.From.GetHerHis] service to the nation, it seems [From.From.GetRank] [From.From.GetName] has pushed [From.From.GetHerselfHimself] too far. As a result of the bad climate in their operational area, the [From.From.GetRank] has now fallen ill, and will likely need some time to recover. Until [From.From.GetSheHe] gets well, [From.From.GetSheHe] will not be performing at [From.From.GetHerHis] usual level."
+unit_leader.1.t:0 "[From.From.GetName]이(가) 병에 걸리다"
+unit_leader.1.d:0 "[From.From.GetNameDef]에서의 [From.GetHerHis](으)로 복무하던 [From.GetRank] [From.GetName]은(는) [From.GetHerselfHimself]을(를) 지나치게 진격하려 한 듯보입니다.  작전 구역의 나쁜 기후로 인해, [From.GetRank]은(는) 질병에 걸렸고 회복하려면 시간이 필요할 것 같습니다. [From.GetSheHe]이(가) 낫기 전까지, [From.GetSheHe]은(는) [From.GetHerHis]이(가) 지닌 원래의 수준을 발휘할 수 없을 것입니다."
 unit_leader.2.t:0 "[From.From.GetName]이(가) 부상당하다"
-unit_leader.2.d:0 "In bringing the battle to a successful conclusion, it seems [From.From.GetRank] [From.From.GetName] put [From.From.GetHerselfHimself] at a bit too much risk while leading [From.From.GetHerHis] men. [From.From.GetSheHeCap] has been wounded, and it will likely take some time for the wounds to fully heal, until which time the [From.From.GetRank] will not be performing at [From.From.GetHerHis] usual level."
+unit_leader.2.d:0 "전투의 성공적인 결과를 위해, [From.GetHerHis]의 병력을 이끌던 [From.GetRank] [From.GetName]은(는) [From.GetHerselfHimself] 스스로를 지나친 위험 부담에 처하게 한 것 같습니다. [From.GetSheHeCap]은(는) 부상을 입었고, 완전히 치료되려면 시간이 필요할 것이며, 그 때까지 [From.GetRank]은(는) [From.GetHerHis]이(가) 지닌 원래의 수준을 발휘할 수 없을 것입니다."
 
 ### Leader Descriptions ###
 
