--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -207,12 +207,12 @@ AOG_market_liberal_DEF:0 "독일령 동아시아 회사"
 AOG_social_conservative:0 "동아시아 회사"
 AOG_social_conservative_ADJ:0 "독일령 동아시아"
 AOG_social_conservative_DEF:0 "동아시아 회사"
-AOG_authoritarian_democrat:0 "총 동아시아 회사"
+AOG_authoritarian_democrat:0 "일반 동아시아 회사"
 AOG_authoritarian_democrat_ADJ:0 "독일령 동아시아"
-AOG_authoritarian_democrat_DEF:0 "총 동아시아 회사"
-AOG_paternal_autocrat:0 "총 동아시아 회사"
+AOG_authoritarian_democrat_DEF:0 "일반 동아시아 회사"
+AOG_paternal_autocrat:0 "일반 동아시아 회사"
 AOG_paternal_autocrat_ADJ:0 "독일령 동아시아"
-AOG_paternal_autocrat_DEF:0 "총 동아시아 회사"
+AOG_paternal_autocrat_DEF:0 "일반 동아시아 회사"
 AOG_national_populist:0 "독일령 동아시아"
 AOG_national_populist_ADJ:0 "독일령 동아시아"
 AOG_national_populist_DEF:0 "독일령 동아시아"
@@ -899,36 +899,36 @@ BRT_national_populist:0 "바로셀란드"
 BRT_national_populist_ADJ:0 "바로셀"
 BRT_national_populist_DEF:0 "바로셀란드"
 
-BRI_totalist:0 "브리타니 코뮌"
-BRI_totalist_ADJ:0 "브리타니"
-BRI_totalist_DEF:0 "브리타니 코뮌"
-BRI_syndicalist:0 "브리타니 코뮌"
-BRI_syndicalist_ADJ:0 "브리타니"
-BRI_syndicalist_DEF:0 "브리타니 코뮌"
-BRI_radical_socialist:0 "브리타니 코뮌"
-BRI_radical_socialist_ADJ:0 "브리타니"
-BRI_radical_socialist_DEF:0 "브리타니 코뮌"
-BRI_social_democrat:0 "브리타니"
-BRI_social_democrat_ADJ:0 "브리타니"
-BRI_social_democrat_DEF:0 "브리타니"
-BRI_social_liberal:0 "브리타니"
-BRI_social_liberal_ADJ:0 "브리타니"
-BRI_social_liberal_DEF:0 "브리타니"
-BRI_market_liberal:0 "브리타니"
-BRI_market_liberal_ADJ:0 "브리타니"
-BRI_market_liberal_DEF:0 "브리타니"
-BRI_social_conservative:0 "브리타니"
-BRI_social_conservative_ADJ:0 "브리타니"
-BRI_social_conservative_DEF:0 "브리타니"
-BRI_authoritarian_democrat:0 "브리타니 공국"
-BRI_authoritarian_democrat_ADJ:0 "브리타니"
-BRI_authoritarian_democrat_DEF:0 "브리타니 공국"
-BRI_paternal_autocrat:0 "브리타니 공국"
-BRI_paternal_autocrat_ADJ:0 "브리타니"
-BRI_paternal_autocrat_DEF:0 "브리타니 공국"
-BRI_national_populist:0 "브리타니 공국"
-BRI_national_populist_ADJ:0 "브리타니"
-BRI_national_populist_DEF:0 "브리타니 공국"
+BRI_totalist:0 "브르타뉴 코뮌"
+BRI_totalist_ADJ:0 "브르타뉴"
+BRI_totalist_DEF:0 "브르타뉴 코뮌"
+BRI_syndicalist:0 "브르타뉴 코뮌"
+BRI_syndicalist_ADJ:0 "브르타뉴"
+BRI_syndicalist_DEF:0 "브르타뉴 코뮌"
+BRI_radical_socialist:0 "브르타뉴 코뮌"
+BRI_radical_socialist_ADJ:0 "브르타뉴"
+BRI_radical_socialist_DEF:0 "브르타뉴 코뮌"
+BRI_social_democrat:0 "브르타뉴"
+BRI_social_democrat_ADJ:0 "브르타뉴"
+BRI_social_democrat_DEF:0 "브르타뉴"
+BRI_social_liberal:0 "브르타뉴"
+BRI_social_liberal_ADJ:0 "브르타뉴"
+BRI_social_liberal_DEF:0 "브르타뉴"
+BRI_market_liberal:0 "브르타뉴"
+BRI_market_liberal_ADJ:0 "브르타뉴"
+BRI_market_liberal_DEF:0 "브르타뉴"
+BRI_social_conservative:0 "브르타뉴"
+BRI_social_conservative_ADJ:0 "브르타뉴"
+BRI_social_conservative_DEF:0 "브르타뉴"
+BRI_authoritarian_democrat:0 "브르타뉴 공국"
+BRI_authoritarian_democrat_ADJ:0 "브르타뉴"
+BRI_authoritarian_democrat_DEF:0 "브르타뉴 공국"
+BRI_paternal_autocrat:0 "브르타뉴 공국"
+BRI_paternal_autocrat_ADJ:0 "브르타뉴"
+BRI_paternal_autocrat_DEF:0 "브르타뉴 공국"
+BRI_national_populist:0 "브르타뉴 공국"
+BRI_national_populist_ADJ:0 "브르타뉴"
+BRI_national_populist_DEF:0 "브르타뉴 공국"
 
 BUL_totalist:0 "불가리아 사회주의 공화국"
 BUL_totalist_ADJ:0 "불가리아"
