--- a/Kaiserreich Korean Translation/localisation/KR_00_Map_States_Anglicised_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_00_Map_States_Anglicised_l_english.yml
@@ -145,7 +145,7 @@ l_english:
  STATE_143:0 "트뢰넬라그"
  STATE_144:0 "노를란 & 트롬스"
  STATE_145:0 "올란드"
- STATE_146:0 "카렐리아"
+ STATE_146:0 "카렐리야"
  STATE_147:0 "쿠올라야르비"
  STATE_148:0 "라플란드"
  STATE_149:0 "오스트로보흐니아"
