--- a/Kaiserreich Korean Translation/localisation/KR_00_Map_States_Native_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_00_Map_States_Native_l_english.yml
@@ -335,7 +335,7 @@ l_english:
  STATE_333:0 "노르트보르네오"
  STATE_334:0 "베스트칼리만탄"
  STATE_335:0 "중부 자바"
- STATE_336:0 "싱가포르"
+ STATE_336:0 "징가푸아"
  STATE_337:0 "페로 제도"
  STATE_338:0 "글로스터셔"
  STATE_339:0 "이즈미르"
