--- a/Kaiserreich Korean Translation/localisation/KR_Political_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Political_l_english.yml
@@ -33,8 +33,8 @@ kr.political.26.b:0 "중요 사건만 알려주세요."
 kr.political.26.c:0 "자잘한 것들도 알고 싶습니다."
 
 kr.political.260.t:0 "지역명 설정"
-kr.political.260.d:0 "이제부터, 저희는 플레이어들이 게임 내 지역명과 관련하여 두 가지 방식을 제공하기로 하였습니다. 첫번째 방식은, 쉽게 이해할 수 있고 가독성을 높인 영문독음 지명을 사용하는 방식입니다. 두번째 방식은 이전버전들 처럼 고유의 원어독음 지명을 사용하고, 특정 지역을 다른 국가가 점령했을 때, 그에 맞춰 해당국가의 언어에 맞게 지명이 유동적으로 변경되는 방식이 있습니다.\n\n\n경고! 영문독음 지명 방식은 지명을 바꾸는 어떠한 이벤트도 없을 것입니다. 이 즉슨 이 방식을 사용하게 될 경우 플레이하는 게임 내내 모든 지명이 고정되며, 변경되지 않을 것입니다."
-kr.political.260.a:0 "영문독음을 사용하겠습니다."
+kr.political.260.d:0 "0.8.4버전부터 지역명/도시명 표기 방식이 두가지로 나뉘어졌습니다. 하나는 영문식 표기이고, 다른 하나는 이전버전과 같은 원어독음 표기방식입니다. 원어독음 표기방식은 해당 지역이나 도시를 통제하는 국가에 따라서 유동적으로 명칭이 변경됩니다. 가령 엘자스-로트링겐을 프랑스가 점령했다면, 이름이 알자스-로렌으로 변경이 됩니다.\n다만, 한국어 패치에 한에서는 '영문식 표기'가 한국어 번역시에는 그다지 차이점이 없습니다. 가령 Bavaria의 경우 영어/한국어 표기가 다릅니다. 이러한 이유로 영문식 표기는 미번역, 즉, 영어 그대로 출력이 될겁니다.\n\n\n경고! '영문식 표기'는 지명이 바뀌는 어떠한 이벤트도 없을 것입니다. 플레이하는 게임 내내 모든 지명이 고정되며, 변경되지 않을 것입니다."
+kr.political.260.a:0 "영문식 표기를 사용하겠습니다."
 kr.political.260.b:0 "이전버전 처럼 원어독음을 사용하겠습니다."
 
 #kr.political.27 moved to _KR_Political_Notice_l_english.yml
