--- a/Kaiserreich Korean Translation/localisation/KR_00_Map_Victory_Points_Native_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_00_Map_Victory_Points_Native_l_english.yml
@@ -1043,7 +1043,7 @@ endo_vp_12456:0 "매디슨"
 endo_vp_12459:0 "뱅고르"
 endo_vp_12465:0 "히바"
 endo_vp_12467:0 "한양"
-endo_vp_12473:0 "할렙"
+endo_vp_12473:0 "할레프"
 endo_vp_12489:0 "리틀록"
 endo_vp_12497:0 "스프링필드"
 endo_vp_12501:0 "내슈빌"
