--- a/Kaiserreich Korean Translation/localisation/KR_West_Indies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_West_Indies_l_english.yml
@@ -200,6 +200,7 @@ CAF_Unity_concessions_2nd_Cayenne:0 "Concessions to the Unity"
 CAF_SocDem_concessions_2nd_Cayenne:0 "Concessions to the Social Democrats"
 
 CAF_2nd_Cayenne_Agreement:0 "제2차 카옌 협약"
+CAF_2nd_Cayenne_Agreement:0 "1931년 체결된 카옌 협약은 프랑스 영토의 지위에 관해 영국과 프랑스 정치인들 사이에 체결된 협약입니다. 그러나 제2차 카옌 협정은 프랑스와 영국 식민지에 대해 동등한 권리와 자주성을 보장합니다. 이로써 논란과 불만을 대폭 줄이고 거기에 더해서 모든 시민들에게 중요한 권리를 더 잘 보장해 줄 수 있게 되었습니다."
 
 CAF_2nd_Cayenne_Agreement2:0 "Sangster Bill"
 CAF_2nd_Cayenne_Agreement2:0 "Social liberal set of resolutions that surely is going to stimulate West Indies economy."
@@ -1290,14 +1291,14 @@ CAF_unity_increase_french_autonomy:0 "Increase French Autonomy"
 CAF_unity_increase_french_autonomy_desc:0 "The PA despite some of their radical viewpoints, are right that the French are deserving of more autonomy than they currently have. Will the NCP will have fierce opposition to this, it is necessary to ensure peace for our young nation."
 CAF_unity_cayenne_french_autonomy:0 "Retain Cayenne French Autonomy"
 CAF_unity_cayenne_french_autonomy_desc:0 "The Cayenne Agreement was right about the topic of French autonomy at least, and it is perfect right where it is at. While this will only really satisfy members of our party and Félix Éboué's group, picking either side on this topic would result in disaster."
-CAF_unity_lower_french_autonomy:0 "Lower French Autonomy"
-CAF_unity_lower_french_autonomy_desc:0 "The Cayenne Agreement was completely wrong in its purpose. The idea that the French population is deserving of more rights than the English is stubborness on the French and PA's part, and not something we should have to deal with."
+CAF_unity_lower_french_autonomy:0 "프랑스인 자치권 감소"
+CAF_unity_lower_french_autonomy_desc:0 "카옌 협약은 그 목적이 완전히 틀렸습니다. 프랑스인이 영국인보다 더 많은 권리를 누릴 자격이 있다는 생각이야말로 프랑스인과 자치당의 결점이며, 이는 타협할 수 있는 사안이 아닙니다."
 CAF_unity_increase_english_autonomy:0 "Increase English Autonomy"
 CAF_unity_increase_english_autonomy_desc:0 "The idea of not mentioning English autonomy in the Cayenne Agreement was ludicrous, and only resulted in an increase of Syndicalist English activities. Autonomy must be properly raised in order to compensate for lack there of from the Cayenne Agreement."
 CAF_unity_cayenne_english_autonomy:0 "Retain Cayenne English Autonomy"
 CAF_unity_cayenne_english_autonomy_desc:0 "English Autonomy is an even more dangerous topic to touch than French, due to it being a trigger for both French and English Syndicalist movements. It's best to leave the topic alone than to touch the hornet's nest."
-CAF_unity_lower_english_autonomy:0 "Lower English Autonomy"
-CAF_unity_lower_english_autonomy_desc:0 "Not discussing English Autonomy in the Cayenne Agreement was a mistake on our part. English Autonomy is already too high with the French Syndicalists growing as a result. It must be lowered in order to satisfy the French population."
+CAF_unity_lower_english_autonomy:0 "영국인 자치권 감소"
+CAF_unity_lower_english_autonomy_desc:0 "카옌 협약에서 영국인들의 자치권을 논의하지 않은 것은 우리의 실수입니다. 너무 높은 영국인들의 자치권은 프랑스 생디칼리스트들의 성장이라는 결과를 불러왔습니다. 프랑스인들을 달래기 위해서라도 이는 낮춰져야만 합니다."
 CAF_unity_crack_down_syndicalism:0 "Crack Down on Syndicalism"
 CAF_unity_crack_down_syndicalism_desc:0 "Syndicalism in the Federation will be an ever-looming threat until dealt with properly, and what is a better time than now? We must make sure our country is never threatened again by the Syndicalist menace."
 CAF_unity_loosen_reigns:0 "Loosen the Reigns"
@@ -1309,7 +1310,7 @@ CAF_unity_french_ties_desc:0 "The French have had limited contact with us beside
 CAF_unity_governor_general:0 "총독의 지위"
 CAF_unity_governor_general_desc:0 "While the Governor-General has served us well, his position in power is something that must be decided. While he serves as a source of inspiration for the English, his presence adds a very distinct English feeling to the French colonies."
 CAF_unity_2nd_agreement:0 "제2차 협약"
-CAF_unity_2nd_agreement_desc:0 "With all things decided and the worst avoided, a 2nd Agreement has officially been forged based off our previous policies. Hopefully this will ensure a future of political peace for the Federation."
+CAF_unity_2nd_agreement_desc:0 "모든 사안이 결정되고 최악의 상황을 넘김에 따라, 기존 협약에 기반하여 수정된 제2차 협약이 공식적으로 체결되었습니다. 이것이 연방의 미래에서 정치적 안정을 보장해 주기를 바래봅시다."
 
 ## PA Victory ##
 CAF_pa_victory:0 "PA의 승리"
