--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -360,11 +360,11 @@ rus_imperial_glory_focus:0 "황제의 영광"
 rus_imperial_free_academies_focus:0 "제국 자유 학술원"
 rus_devoted_subjects_focus:0 "충성스러운 백성"
 soviet_worker_soldier:0 "소비에트의 위협"
-soviet_worker_soldier_desc:0 "The continuing instability and the strength of the red influence have forced us to compromise with the proletariat after the civil war. Bolshevik activity is still high in Russia and in the case of a further weakening of our power they might attempt to rise up again."
+soviet_worker_soldier_desc:0 "계속되는 불안정과 붉은 영향력은 내전 이후 우리가 프롤레타리아들과 타협하게 끔 하였습니다.. 볼셰비키 활동은 러시아에서 여전이 활발하게 이루어지고 있으며, 우리의 권력이 약화될 경우 볼셰비키들은 다시 들고 일어날 것입니다."
 rus_military_spirit_idea:0 "군사 정신"
 RUS_anti_bolshevik_idea:0 "반볼셰비키 정책"
 rus_sav_econ:0 "군을 위한 경제"
-rus_sav_econ_desc:0 "Though Savinkov's government has started to revive our economy, the military factories still get more attention than other parts of the industry. Many people are not satisfied with this policy."
+rus_sav_econ_desc:0 "사빈코프가 정부가 우리나라의 경제를 살리기 시작했긴했지만, 군수공장들은 여전히 다른 산업체들보다 더 많은 관심을 받고 있습니다. 많은 국민들은 이 정책에 만족하고 있지 않습니다."
 rus_sav_econ1:0 "국가와 육군은 함께 서리라!"
 rus_sav_econ1_desc:0 "We could finally reorganise our economy, including the civil industry, but the stabilisation of the economy will take some time."
 RUS_Vroom:0 "Limousine 'Triumph'"
