--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -328,7 +328,7 @@ rus_more_MP_focus:0 "다수 동원"
 rus_better_infantry_production_focus:0 "보병 장비 현대화"
 training_barracks:0 "지역 훈련 막사"
 rus_military_infrastructure_focus:0 "군사 기반시설 개발"
-planning_school:0 "National Planning School"
+planning_school:0 "국립계획학교"
 rus_army_experience_focus:0 "Initiative to the Commanders"
 general_school:0 "국립 고위 사관학교"
 tank_academy:0 "국립 기갑 사관학교"
@@ -436,7 +436,7 @@ unlock_arirep:0 "드미트리 대통령이 실권자입니다"
 RUS_DEM_REP:0 "민주 공화정을 설립"
 RUS_DEM_REP_desc:0 "러시아 공화국의 가장 큰 죄악은 러시아 내전 이후에 완전한 민주화를 이루어내지 못했다는 것입니다. 우리가 독재자들, 좌파, 우파 모두로부터 우리 자신을 지키기 위해서는 우리 나라와 우리의 경제 그리고 국민들을 좀 더 자유롭게 할 필요가 있습니다."
 dem_rep_tooltip:0 "§R공화국을 있는 그대로 유지하되 정치적인 자유를 허용할 것입니다.§! \n"
-unlock_demrep:0 "상원이 여전히 실권을 가지고 있습니다 §Yor§! 인민전선 정부가 정권을 장악했습니다"
+unlock_demrep:0 "상원이 여전히 실권을 가지고 있거나 §Y또는§! 인민전선 정부가 정권을 장악하고 있습니다"
 RUS_reinforce_kornilov:0 "코르닐로프의 권력을 강화"
 RUS_reinforce_kornilov_desc:0 "용맹한 쿠데타 이후, 내전의 베테랑 장군인 코르닐로프는 그 자신을 러시아의 국가 수반으로 만들었습니다. 이제 몇 달이 지났고 코르닐로프는 현재 공화국에 대한 그의 권력을 강화할 수 있는 위치에 서있습니다."
 kornilov_focus_tooltip:0 "§R코르닐로프는 계속해서 군사 독재 정권을 유지할 것입니다.§!\n"
@@ -448,7 +448,7 @@ vozhd_focus_tooltip:0 "§R사빈코프는 공식적으로 공화국의 새로운
 RUS_MIL_DICT:0 "군사 독재"
 RUS_MIL_DICT_desc:0 "육군은 나약한 자유주의 공화국에 의해 약화된 후에도 러시아에서 항상 안정된 군대였습니다. 그들은 러시아를 보호하기 위해 강력함을 유지해왔습니다. 이제 그들이 러시아를 통제하는 이유는 오로지 정의 뿐입니다. 오직 육군만이 모든 국가적 분쟁에서 자신이 먼저 뛰어들 수 있습니다."
 MIL_DICT_focus_tooltip:0 "§R러시아는 계속해서 군부의 통제를 받습니다!§!\n"
-unlock_milgov:0 "브란겔이 정부를 이끌고 있습니다 §Yor§! 사빈코프가 정부를 이끌고 있으며 코르닐로프는 자신의 직책을 수행할 수 없습니다"
+unlock_milgov:0 "브란겔 §Y또는§! 사빈코프가 정부를 이끌고 있으며 코르닐로프는 자신의 직책을 수행할 수 없습니다"
 
 RUS_SOVIET:0 "프롤레타리아 독재정을 복원"
 RUS_SOVIET_desc:0 "이제 낡은 엘리트들이 아닌 노동자들에게 충실한 사람들이 이전 케렌스키 정부의 실패로 인한 피해를 복구하러 나설 때입니다."
