--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
@@ -134,49 +134,49 @@ rusfor.1.t:0 "외교 정책"
 rusfor.1.d:0 "이제 우리의 통치가 확고해졌으므로, 우리는 세계의 다른 나라들에 대한 우리의 입장을 고려하기 시작할 수 있습니다. 러시아는 세계 무대에서 더 많은 활동을 시작할 수 있지만, 독일과 일본의 영향권에 개입하기는 너무 약합니다. 죽어가는 오스만 제국과 접해 있는 코카서스는 우리가 이용할 수 있는 풍부한 석유 매장량을 갖추고 있습니다. 중앙아시아는 알라쉬 오르다와 투르케스탄 사이에 불안정한 상황으로 인해 더욱 쉬운 표적이 되고 있습니다. 우리는 다른 어느 곳으로든 시선을 옮기기 전에 이 지역들을 보호해야 합니다."
 rusfor.1.a:0 "우리의 힘을 세상에 보여주자!"
 
-rusfor.2.t:0 "동부 국경의 방위"
-rusfor.2.d:0 "Russia has recaptured the positions in the Caucasus their Empire has held before. This, and the recent surge of Arabian nationalism, originating from Egypt and Hashemite Arabia, puts our state and its foreign interest in grave danger. To have any hope to survive the approaching struggles with our hostile Arabian neighbours, we must quickly stabilise our eastern borders. The Sultan plans to send Prince Nihad to propose a non-aggression treaty with Russia."
-rusfor.2.a:0 "Send the Prince!"
-rusfor.2.b:0 "러시아놈들과 거래는 없다!"
+rusfor.2.t:0 "동부 국경 방위"
+rusfor.2.d:0 "러시아는 과거 러시아 제국이 차지했었던 코카서스 지방을 탈환했습니다. 최근 이집트와 하심가 아라비아에서 시작된 아라비아 국민주의의 급증은 우리나라와 우리나라에 대한 외국의 관심을 심각한 위험에 빠뜨렸습니다. 우리에게 적대적인 아랍인들과의 싸움에서 살아남기 위해, 먼저 동부 국경지대를 안정시켜야합니다. 술탄은 러시아에 불가침 조약을 제안하기 위해 니아드 왕세자를 파견시킬 계획입니다."
+rusfor.2.a:0 "왕세자를 파견하라!"
+rusfor.2.b:0 "러시아 놈들과 거래는 없다!"
 
-rusfor.3.t:0 "Non-Aggression Pact with the Ottomans"
-rusfor.3.d:0 "Our recent achievements in the Caucasus, namely the annexation of Georgia, has greatly disturbed the Ottoman Empire. The Ottoman Prince Nihad has arrived in our capital with the proposal of a non-aggression pact between our nations. Both sides of the pact are to recognise the current state of the border between the Ottoman Empire and Russia. How shall we respond to this proposal?"
-rusfor.3.a:0 "We need security too, sign the pact!"
-rusfor.3.b:0 "Include Armenia in the deal!"
-rusfor.3.c:0 "No, we don't need it."
+rusfor.3.t:0 "오스만과 불가침 조약"
+rusfor.3.d:0 "최근 우리가 코카서스 지방에서 이뤄낸 성과, 즉, 조지아 합병은 오스만 제국을 크게 혼란스럽게 만들었습니다. 오스만 제국의 니아드 왕세자가 우리나라의 수도에 도착했습니다. 우리나라와 불가침 조약을 체결하기 원해서 온 것으로 보입니다. 이 조약은 오스만 제국과 러시아 양측간의 국경을 인정하는 것이 명시되어있습니다. 이 제안에 대해 어떤 반응을 보여야할까요?"
+rusfor.3.a:0 "우리도 안전이 중요하다, 조약에 서명하라!"
+rusfor.3.b:0 "아르메니아도 거래에 포함시킨다!"
+rusfor.3.c:0 "아니, 우리는 조약따위 필요없다."
 
-rusfor.4.t:0 "A Non-aggression pact has been signed"
-rusfor.4.d:0 "The air plane of Prince Nihad has landed in Istanbul today. Upon his return, the prince has announced that the pact with the Russian government was signed. The Eastern border of our empire is now secure!"
-rusfor.4.a:0 "A grand success for Ottoman diplomacy!"
+rusfor.4.t:0 "불가침 조약이 서명되었습니다"
+rusfor.4.d:0 "니아드 왕세자가 탑승한 비행기가 오늘 이스탄불에 도착하였습니다. 왕세자가 돌아오자, 왕세자는 러시아 정부와의 불가침 조약이 체결되었다고 발표하였습니다. 이제 우리 제국의 동부 국경지대는 안전합니다!"
+rusfor.4.a:0 "오스만 외교의 대성공이로군!"
 
-rusfor.5.t:0 "State of the Non-Aggression Pact with the Russians"
-rusfor.5.d:0 "The Russian State has agreed to sign our proposed pact, but they demand that we turn over our buffer-state Armenia to their sphere of influence."
-rusfor.5.a:0 "Abandon Armenia to its fate."
-rusfor.5.b:0 "We won't give up on Armenia!"
+rusfor.5.t:0 "러시아와의 불가침 조약에 대한 상황"
+rusfor.5.d:0 "러시아 정부는 조약에 대해 동의하였지만, 완충지역인 아르메니아를 자신들의 영향권으로 넘겨줄 것을 요구하였습니다."
+rusfor.5.a:0 "아르메니아가 어찌되던지 눈감아주자."
+rusfor.5.b:0 "우리는 아르메니아를 포기하지 않을 것이다!"
 
-rusfor.6.t:0 "Non-Aggression pact with Ottomans was signed"
-rusfor.6.d:0 "The Ottoman Empire has agreed to turn over Armenia into our sphere of influence. We have successfully eliminated the probability of war with the Ottoman Empire, thus freeing our hands to deal with more serious threats to our security in the process. It's a grand success for Russian diplomacy!"
-rusfor.6.a:0 "Hooray!"
+rusfor.6.t:0 "오스만과의 불가침 조약이 체결되었습니다"
+rusfor.6.d:0 "오스만 제국이 아르메니아를 우리의 영향권으로 넘겨주는 것에 대해 동의하였습니다. 우리는 오스만 제국과의 전쟁에 대한 가능성을 성공적으로 제거했으며, 이에따라 우리의 안보에서 가장 심각한 위협이었던 사안을 대처할 수 있게 되었습니다. 러시아 외교의 대성공입니다!"
+rusfor.6.a:0 "만세!"
 
-rusfor.7.t:0 "크림 반도"
-rusfor.7.d:0 "For years now our naval chiefs have lamented our lack of presence in the Black Sea, a sea once dominated by the Russian Navy. Our new Ukrainian allies are very grateful to us for liberating them from foreign domination, and they may be willing to lease us the Crimea as a naval base in exchange for Russian technical expertise and financial compensation."
-rusfor.7.a:0 "Try to lease the Crimea."
-rusfor.7.b:0 "Leave the Crimea for the Ukraine."
+rusfor.7.t:0 "크림반도"
+rusfor.7.d:0 "수년간 우리의 해군 장교들은 한때 러시아 해군이 지배했던 바다였던 흑해에서의 우리의 비약한 존재감에 대해 개탄해왔습니다. 우리의 새로운 동맹국인 우크라이나는 외국의 지배로부터 해방시켜준 것에 대해 몹시 감사하고 있으며, 우크라이나가 러시아의 기술적인 전문지식과 재정적인 보상을 대가로 우리에게 크림반도를 해군기지로서 조차 해줄지도 모릅니다."
+rusfor.7.a:0 "크림반도 조차를 요구해보자."
+rusfor.7.b:0 "크림반도를 우크라이나에 잔류시켜두자."
 
-rusfor.8.t:0 "러시아가 크림의 조차를 요구하다"
-rusfor.8.d:0 "The Russians have asked that they be allowed to lease the Crimea as a naval base for 99 years in exchange for a considerable sum of money and Russian technical expertise. We are under Russian authority now and it would be difficult for us to refuse."
-rusfor.8.a:0 "Give the Crimea to the Russians."
-rusfor.8.b:0 "No, the Crimea is Ukrainian now!"
+rusfor.8.t:0 "러시아가 크림반도 조차를 요구하다"
+rusfor.8.d:0 "러시아는 크림반도를 99년간 해군기지로서 조차할 수 있도록 해달라는 요청을 해왔으며, 조차의 대가로 상당한 보상금과 러시아의 기술적인 전문지식을 약속했습니다. 현재 우리는 러시아의 영향권 아래 있으며, 따라서 이 요구를 거부하기는 어려울 것입니다."
+rusfor.8.a:0 "러시아에 크림반도를 주자."
+rusfor.8.b:0 "거절한다, 크림반도는 이제 우크라이나의 것이다!"
 
-rusfor.9.t:0 "우크라이나인들이 우리에게 크림을 조차하다!"
-rusfor.9.d:0 "우크라이나인들은 우리에게 99년간 크림 반도를 대여해주는 데 동의했습니다!"
+rusfor.9.t:0 "우크라이나가 크림반도를 조차해주다!"
+rusfor.9.d:0 "우크라이나가 우리에게 99년간 크림 반도를 조차해주는 것에 동의하였습니다!"
 rusfor.9.a:0 "좋았어!"
 
-rusfor.10.t:0 "우크라이나인들이 우리에게 크림을 조차하기를 거부하다!"
-rusfor.10.d:0 "우크라이나인들이 우리의 요구를 거부했습니다! 이 굴욕에 어떻게 대응해야 할까요?"
+rusfor.10.t:0 "우크라이나가 크림반도 조차를 거부하다!"
+rusfor.10.d:0 "우크라이나가 우리의 요구를 거부했습니다! 이 치욕에 어떻게 대응해야 할까요?"
 rusfor.10.a:0 "영유권을 포기하라."
-rusfor.10.b:0 "그들은 우리를 위해 흑해를 더 잘 통제해야 한다."
-rusfor.10.c:0 "배은망덕한 우크라이나놈들! 이건 전쟁을 뜻한다!"
+rusfor.10.b:0 "우크라이나는 우리를 위해 흑해를 더 잘 통제해야 한다."
+rusfor.10.c:0 "배은망덕한 우크라이나 놈들! 이건 전쟁이다!"
 
 rusfor.11.t:0 "러일 전쟁"
 rusfor.11.d:0 "러시아와 일본은 전쟁 중입니다! 비록 우리의 확장을 위해 전쟁에서 적어도 한 쪽을 지원해야 할지라도, 이것은 우리 몽골의 통치를 시베리아나 중국으로 확장할 수 있는 기회가 될 수 있습니다."
@@ -196,24 +196,24 @@ rusfor.13.a:0 "몽골을 우리 동맹에 초대하자."
 rusfor.13.b:0 "아니, 우린 저 미개한 몽골 놈들을 믿을 수 없다!"
 
 rusfor.14.t:0 "러시아가 중앙 러시아를 통제합니다"
-rusfor.14.d:0 "Stability comes back to Central Asia where, since the fall of Tsarist Russia, tribes and hordes were fighting each other. Now our Central Asian border is much more secure and we can strengthen ourselves in Ural."
+rusfor.14.d:0 "차르통치하 러시아 제국의 몰락으로 부족들과 군중들이 서로 다투던 중앙아시아 지역에 다시 안정이 찾아왔습니다. 이제 중앙아시아 국경지대는 훨씬 더 안전해졌으며, 우랄 지역에서 국력을 강화시킬 수 있을겁니다."
 rusfor.14.a:0 "좋았어!"
 
 rusfor.15.t:0 "러시아가 시베리아를 통제합니다"
-rusfor.15.d:0 "Stability comes back to Siberia, where barbaric Mongols and the treacherous admiral Kolchak had been trying to drive Russia in chaos. Now our Siberian border is much more secure and we can strengthen ourselves in Siberia."
+rusfor.15.d:0 "야만적인 몽골인들과 추악한 콜차크 제독이 러시아를 혼란에 빠뜨리려던 시베리아 지역에 다시 안정이 찾아왔습니다. 이제 시베리아 국경지대는 훨씬 더 안전해졌으며, 시베리아 지역에서 국력을 강화시킬 수 있을겁니다."
 rusfor.15.a:0 "좋았어!"
 
 rus_cooperation_canada:0 "캐나다와의 군사 협력"
 rus_cooperation_nat_france:0 "국민 프랑스와의 군사 협력"
 
 rusfor.16.t:0 "백루테니아의 운명"
-rusfor.16.d:0 "The former White Ruthenian state is now under our direct military control. We cannot hope to keep the areas of the former state in line for too long, though. Most politicians are calling for the restoration of White Ruthenia as a buffer state, with the eastern parts of the country directly integrated into Russia. However, nationalists strongly disagree with this kind of solution and instead they demand that White Ruthenia be permanently integrated into Russia."
-rusfor.16.a:0 "1936년 백루테니아의 국경을 복원한다!"
+rusfor.16.d:0 "구 백루테니아 지역은 이제 우리 군대의 직할통치를 받고 있습니다. 그러나 이 백루테니아 지역의 경계를 오랫동안 이 상태로 둘 수는 없습니다. 많은 정치인들은 백루테니아를 완충지대 역할을 하는 국가로 부활시키고, 동부 지역은 러시아에 합병해야한다고 주장하고 있습니다. 반면에 민족주의자들은 이러한 해결방안에 대해 극구 반대하고 있으며, 백루테니아를 러시아에 영구히 통합시킬 것을 대안으로 내세우고 있습니다."
+rusfor.16.a:0 "1936년 시절 백루테니아 국경을 부활시킨다!"
 rusfor.16.b:0 "영토의 대다수를 러시아에 합병하고 백루테니아를 복원시켜라!"
-rusfor.16.c:0 "러시아에 백루테니아를 합병시킨다!"
+rusfor.16.c:0 "백루테니아를 러시아에 합병시킨다!"
 
 rusfor.17.t:0 "백루테니아의 독립"
-rusfor.17.d:0 "We have decided that it will be in Russia's best interest if an independent White Ruthenia emerges on the Russian border. How much independence will it really have?"
+rusfor.17.d:0 "우리는 러시아 국경에 독립된 백루테니아가 존재할 경우 러시아에 득이 될 것이라고 판단했습니다. 백루테니아는 어느정도의 독립상태를 가져야할까요?"
 rusfor.17.a:0 "괴뢰화하자!"
 rusfor.17.b:0 "완전한 독립이다!"
 
